# imdb

./: .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: test_model.yml
model/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
model/src/data/: download.py  extract.py  io.py  make_dataset.py  paths.py  preprocess.py
model/src/visualization/: visualize.py
model/tests/: conftest.py
model/tests/src/data/: test_download.py  test_extract.py  test_io.py
