[tool.poetry]
name = "src"
version = "0.1.0"
description = "A model factory for IMDB dataset."
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
